fix: make slider overflow hidden on the index-main page

--- a/shelter/style-main.css
+++ b/shelter/style-main.css
@@ -299,6 +299,7 @@ body {
     gap: 90px;
     scroll-behavior: smooth;
     overflow-x: scroll;
+    overflow: hidden;
 }
 
 .pet {
